<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
    android:layout_gravity="center">

    <!-- UserName Layout -->
    <LinearLayout
        android:id="@+id/userNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"/>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        tools:text="TESTER"/>
    </LinearLayout>

    <!-- Password Layout -->
    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </LinearLayout>
    <!-- Error message layout-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <!-- Empty username message -->
        <TextView
            android:id="@+id/emptyUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_username"
            android:textSize="15dp"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"/>
        <!-- Empty password message -->
        <TextView
            android:id="@+id/emptyPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_password"
            android:textSize="15dp"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"/>

        <!-- Empty username and password message -->
        <TextView
            android:id="@+id/emptyUsernameAndPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_password_and_username"
            android:textSize="15dp"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"/>
    </RelativeLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center" />


</LinearLayout>